<resources>
    <string name="app_name">StayIn</string>
    <string name="stayin">StayIn</string>
    <string name="plan_your_trip">Plan Your Trip</string>
    <string name="plan_your_trip_choose_your_destination_npick_the_best_place_for_your_holiday">Plan your trip, choose your destination.\nPick the best place for your holiday.</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_the_date">Select The Date</string>
    <string name="select_the_day_book_your_ticket_we_give_nyou_the_best_price_we_guarantied">Select the day, book your ticket. We give\nyou the best price. We guarantied!</string>
    <string name="enjoy_your_holiday_don_t_forget_to_take_na_photo_and_share_to_the_world">Enjoy your holiday! don\'t forget to take \na photo and share to the world</string>
    <string name="let_s_go">let’s go!</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="i_agree_the">I agree the</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="register_now">Register Now</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="having_trouble_get_help">Having Trouble ? Get Help</string>
    <string name="verification">Verification</string>
    <string name="enter_code_here">Enter Code Here</string>
    <string name="if_you_didn_t_receive_the_code">If you didn\'t receive the code?</string>
    <string name="resend">Resend</string>
    <string name="enjoy_your_trip">Enjoy Your Trip</string>
    <string name="location">Location</string>
    <string name="popular_destination">Popular Destination</string>
    <string name="_10_tour_available">10 Tour Available</string>
    <string name="discover_new_places">Discover New Places</string>
    <string name="our_latest_blog_category">Our Latest Blog Category</string>
    <string name="byron_bay">Byron Bay</string>
    <string name="people_also_search">People Also Search</string>
    <string name="great_barrier_reef">Great Barrier Reef</string>
    <string name="what_people_s_say">What People\'s Say</string>
    <string name="matt_hardy">Matt Hardy</string>
    <string name="australia">Australia</string>
    <string name="usa">USA</string>
    <string name="france">France</string>
    <string name="india">India</string>
    <string name="england">England</string>
    <string name="_3_123">3,123</string>
    <string name="loved_this">Loved this</string>
    <string name="it_is_presented_at_the_exposition_universelle_in_paris_in_1889_324_meters_high_it_is_one_of_the_most_visited">it is presented at the Exposition Universelle in Paris in 1889. 324 meters high, it is one of the most visited.....</string>
    <string name="done">Done</string>
    <string name="prince_range">Prince Range</string>
    <string name="duration">Duration</string>
    <string name="_350">$350</string>
    <string name="_5400">$5400</string>
    <string name="type">Type</string>
    <string name="ral">Ral</string>
    <string name="family">Family</string>
    <string name="classic">Classic</string>
    <string name="yolo">Yolo</string>
    <string name="active">Active</string>
    <string name="choose_dates">Choose Dates</string>
    <string name="december">December</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="paris">Paris</string>
    <string name="back">Back</string>
    <string name="top_10_favourite_ndestination_in_paris">Top 10 Favourite\nDestination In Paris</string>
    <string name="disneyland_paris">Disneyland Paris</string>
    <string name="departure">Departure</string>
    <string name="_23rd_oct_2017">23rd Oct 2017</string>
    <string name="discover_7_world_heritage_sites_in_this_ntour">Discover 7 World Heritage Sites in this\ntour.</string>
    <string name="_5_days_4_nights">5 Days / 4 Nights</string>
    <string name="fans_of_mickey_can_visit_disneyland_paris_which_is_located_32_km_from_central_paris_with_connection_to_the_suburban_rer_a">Fans of Mickey can visit Disneyland Paris which is located 32 km from central Paris, with connection to the suburban RER A.</string>
    <string name="disneyland_paris_has_two_theme_parks_disneyland_with_sleeping_beauty_s_castle_and_walt_disney_studios_top_attractions_are_space_mountain_it_s_a_small_world_and_big_thunder_mountain">Disneyland Paris has two theme parks: Disneyland (with Sleeping Beauty’s castle) and Walt Disney Studios. Top attractions are Space Mountain, It’s a Small World and Big Thunder Mountain.</string>
    <string name="overview">Overview</string>
    <string name="places">Places</string>
    <string name="itinerary">Itinerary</string>
    <string name="review">Review</string>
    <string name="_1_020">$1,020</string>
    <string name="per_person">per person</string>
    <string name="_4_8_512_reviews">4.8 (512 Reviews)</string>
    <string name="book_now">Book Now</string>
    <string name="day_1_2_3">Day 1,2,3</string>
    <string name="_34">34%</string>
    <string name="booking_available">Booking Available</string>
    <string name="disneyland_paris_nparis">Disneyland Paris\nParis</string>
    <string name="_9_3">9.3</string>
    <string name="_512_reviews">(512 Reviews)</string>
    <string name="view_all">View All</string>
    <string name="add_review">Add Review</string>
    <string name="serena_smith">Serena Smith</string>
    <string name="_27dec2019">27Dec2019</string>
    <string name="rate_this_application">Rate This Application</string>
    <string name="tell_others_what_you_think">Tell others what you think</string>
    <string name="describe_your_experience">Describe Your Experience</string>
    <string name="write_here">Write here...</string>
    <string name="booking_now">Booking Now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="start_tour">Start Tour</string>
    <string name="end_tour">End Tour</string>
    <string name="members">Members</string>
    <string name="payment">Payment</string>
    <string name="online_payments">Online Payments</string>
    <string name="after_your_first_payment_we_will_save_your_details_for_future_use">After your first payment, we will save your details for future use.</string>
    <string name="credit_debit_amt_cards"><![CDATA[Credit, Debit & AMT Cards]]></string>
    <string name="net_banking">Net Banking</string>
    <string name="paypal">PayPal</string>
    <string name="visa_card">Visa Card</string>
    <string name="card_detail">Card Detail</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="expiresdate">Expires Date</string>
    <string name="save">Save</string>
    <string name="booking_details">Booking Details</string>
    <string name="booking_for">Booking For</string>
    <string name="kenneth_gutierrez_20_80742_877">Kenneth Gutierrez, +20 80742 877</string>
    <string name="edit">Edit</string>
    <string name="adult">Adult</string>
    <string name="child">Child</string>
    <string name="apply_promo_code">Apply Promo Code</string>
    <string name="remove">Remove</string>
    <string name="total_persons">Total Persons</string>
    <string name="promo_code">Promo Code</string>
    <string name="_6_000">$6,000</string>
    <string name="_500">$500</string>
    <string name="total_amount">Total Amount</string>
    <string name="pay_now">Pay Now</string>
    <string name="payment_successful">Payment Successful!</string>
    <string name="credit_card">Credit Card</string>
    <string name="_5478">****_****_**** 5478</string>
    <string name="_15_jan_2020_15_30_pm">15 Jan 2020 15:30 PM</string>
    <string name="download_receipt">Download Receipt</string>
    <string name="notification">Notification</string>
    <string name="kenneth_gutierrez">Kenneth Gutierrez</string>
    <string name="kenneth_gutierrez_gmail_com">Kenneth_gutierrez@gmail.com</string>
    <string name="tours">Tours</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="help_center">Help Center</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="fans_of_mickey_can_visit_disneyland_paris_which_is_located_32_km_from_central_paris">Fans of Mickey can visit Disneyland Paris which is located 32 km from central Paris…..</string>
    <string name="dec_20_2019_at_12_02_am">Dec 20, 2019 at 12:02 AM</string>
    <string name="language">Language</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="sed_tortor_ante_this_is_nvestibulum_non_crisus_id_porta_nimperdiet_purus">Sed tortor ante, this is\nvestibulum non crisus id, porta \nimperdiet purus.</string>
    <string name="invite_now">Invite Now</string>
    <string name="profile">Profile</string>
    <string name="_20_80742_877">+20 80742 877</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_15_01_1991">15/01/1991</string>
    <string name="_123_royal_street_new_york">123 Royal Street, New York</string>
    <string name="my_trip">My Trip</string>
    <string name="booking_on_15_jan">Booking on 15 Jan</string>
    <string name="book_again">Book Again</string>
    <string name="need_help">Need Help?</string>
    <string name="favorite">Favorite</string>
</resources>